<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:tools="http://schemas.android.com/tools"
   android:id="@+id/scroll"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
   android:fillViewport="true"
   android:stackFromBottom="true"
   android:transcriptMode="alwaysScroll" >
      
<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
<TextView
        android:id="@+id/lsttextView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/write_cv_lbl"
        android:textAppearance="?android:attr/textAppearanceLarge" />
 <LinearLayout 
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
  >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/nom_lbl"
        android:textColor="#FF0000"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/nom_tbt"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:inputType="text"
        android:text="nom1" />

  </LinearLayout>
   <LinearLayout 
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
  >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/prenom_lbl"
        android:textColor="#FF0000"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/prenom_tbt"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="prenom1" />

  </LinearLayout>
  <LinearLayout 
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
  >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/adresse_lbl"
        android:textColor="#FF0000"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/adresse_tbt"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="adresse1" />

  </LinearLayout>
   <LinearLayout 
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
  >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/tel_lbl"
        android:textColor="#FF0000"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/tel_tbt"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:inputType="text"
        android:text="adresse1" />

  </LinearLayout>
  <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cursus_tab"
        android:textAppearance="?android:attr/textAppearanceLarge" />
  <LinearLayout 
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
  >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/annee_dipl_lbl"
        android:textColor="#FF0000"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/annee__diple_tbt"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:inputType="number" />

  </LinearLayout>
   <LinearLayout 
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
  >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/diplome_lbl"
        android:textColor="#FF0000"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/nom_diple_tbt"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
         />

  </LinearLayout>
  <LinearLayout 
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
  >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/annee_exp_lbl"
        android:textColor="#FF0000"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/annee__exp_tbt"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:inputType="number" />

  </LinearLayout>
   <LinearLayout 
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
  >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/experience_lbl"
        android:textColor="#FF0000"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/experience_tbt"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
         />

  </LinearLayout>
  <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/competences_tab"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    <LinearLayout 
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
  >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/titre_cmpt_lbl"
        android:textColor="#FF0000"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/titre_cmpt_tbt"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:inputType="text" />

  </LinearLayout>
   <LinearLayout 
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
  >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/desc_cmpt_lbl"
        android:textColor="#FF0000"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/desc_cmpt_tbt"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
         />

  </LinearLayout>
  <LinearLayout 
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
  >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/annee_projet_lbl"
        android:textColor="#FF0000"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/annee_projet_tbt"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:inputType="number" />

  </LinearLayout>
   <LinearLayout 
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
  >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/projet_lbl"
        android:textColor="#FF0000"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/projet_tbt"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
         />
  </LinearLayout>
   <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/losirs_tab"
        android:textAppearance="?android:attr/textAppearanceLarge" />
<LinearLayout 
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
  >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/titre_loisir_lbl"
        android:textColor="#FF0000"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/loisir_tbt"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:inputType="text" />

  </LinearLayout>
   <LinearLayout 
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
  >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/langue_lbl"
        android:textColor="#FF0000"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/langue_tbt"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
         />

  </LinearLayout>
  <LinearLayout 
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
  >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/niveau_lbl"
        android:textColor="#FF0000"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/niveau_tbt"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:inputType="text"
         />

  </LinearLayout>
  <LinearLayout 
     android:layout_width="match_parent"
     android:layout_height="match_parent"
      android:orientation="horizontal">

      <LinearLayout
          android:layout_width="wrap_content"
          android:layout_height="match_parent"
          android:orientation="vertical" >
      </LinearLayout>

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/post_cv_btn" />

    <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/abort_cv_btn" />
    
</LinearLayout>
</LinearLayout>

   </ScrollView>
    
 
