<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/lsttextView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/identity_tab"
        android:textAppearance="?android:attr/textAppearanceLarge" />
 <LinearLayout 
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
  >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/nom_lbl"
        android:textColor="#FF0000"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/nom_tbt"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:inputType="numberDecimal" />

  </LinearLayout>
   <LinearLayout 
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
  >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/prenom_lbl"
        android:textColor="#FF0000"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/prenom_tbt"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
         />

  </LinearLayout>
  <LinearLayout 
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
  >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/adresse_lbl"
        android:textColor="#FF0000"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/adresse_tbt"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
         />

  </LinearLayout>
   <LinearLayout 
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
  >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/tel_lbl"
        android:textColor="#FF0000"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/tel_tbt"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:inputType="number|textPhonetic" />

  </LinearLayout>
</LinearLayout>